tests/codegen/pass/006-leq.hyg
assert(3 <= 5);
assert( 2 <= 2);
assert(3.14f <= 5.0f)